
    Added to the "logtalk" built-in object two sets of utility predicates:
    decompile_predicate_heads/2-4 and decompile_predicate_indicators/2-4.
    Marked the decompile_predicate_head/4 and decompile_predicate_indicator/4
    as deprecated. Changed the utility predicates that compile/decompile
    predicate heads/indicators to no longer accept conjunctions in the first
    argument.

    Updated the "encodings" example in order to ensure that the there is no
    whitespace before the encoding/1 directive.


2.42.3 - February 21, 2011

    Allow dynamic predicates declared in a category to be called in "this"
    from within the category. In previous versions, such calls would result
    in a compile-time error, forcing these predicates to be called in "self"
    (using the ::/1 message sending control construct).

    Added Logtalk compiler support for pre-compiled clause heads (using the
    {}/1 control construct). This feature is mostly useful when using the
    term-expansion mechanism.

    Corrected a bug on the code that simplifies the predicate clauses
    generated by the compilation of grammar rules. The code would loop
    when a grammar rule contained a meta-variable, which the Logtalk
    compiler should (but currently don't) report as illegal (the call/1
    control construct should be used instead on this case). Thanks to
    Nicolas Pelletier for the bug report.

    Simplified the compilation of calls in the context of the pseudo-object
    "user".

    Added a debugger command "p" to the Logtalk built-in debugger. This
    command prints the current goal using the print/1 predicate when
    available. Renamed the debugger command "q" to "Q". Corrected a bug
    where the debugger command "w" would not be recognized. Changed the
    debugger command "d" to quote terms when necessary.

    Added a partial implementation of the ISO Prolog predicate_property/2
    predicate to the ECLiPSe config file.
