@@ -14,4 +14,4 @@ To load this example and for sample queries, please see the SCRIPT.txt file.
 This example illustrates how to use multifile predicates within Logtalk objects
 and categories. Note, however, that a back-end Prolog compiler also supporting
 static multifile predicates is required to run this example (Qu-Prolog 8.12 and
-XSB 3.2 only support dynamic multifile predicates).
+XSB 3.3 only support dynamic multifile predicates).
