@@ -23,10 +23,10 @@ system path):
 * Qu-Prolog (version 8.12 or later):     qplgt
 * SICStus Prolog (versions 3.12.x, 4.x): sicstuslgt
 * SWI-Prolog (version 5.8.0 or later):   swilgt
-* XSB (version 3.2 or later):            xsblgt     (first run must use sudo)
-* XSB 64 bits (version 3.2 or later):    xsb64lgt   (first run must use sudo)
-* XSB MT (version 3.2 or later):         xsbmtlgt   (first run must use sudo)
-* XSB MT 64 bits (version 3.2 or later): xsbmt64lgt (first run must use sudo)
+* XSB (version 3.3 or later):            xsblgt     (first run must use sudo)
+* XSB 64 bits (version 3.3 or later):    xsb64lgt   (first run must use sudo)
+* XSB MT (version 3.3 or later):         xsbmtlgt   (first run must use sudo)
+* XSB MT 64 bits (version 3.3 or later): xsbmt64lgt (first run must use sudo)
 * YAP (version 6.0.2 or later):          yaplgt
 
 On Windows systems, the Logtalk installer makes the Prolog integration 
