@@ -18,7 +18,7 @@ xsb64lgt \-- Logtalk integration script for XSB 64 bits
 Initialization goal, written between double quotes, to be executed after Logtalk startup.
 
 .SH REQUIREMENTS
-XSB 3.2 or later is required, compiled 64 bits. This integration script assumes that the XSB executable is named "xsb-bits64".
+XSB 3.3 or later is required, compiled 64 bits. This integration script assumes that the XSB executable is named "xsb-bits64".
 
 .SH ENVIRONMENT
 .TP
