@@ -18,7 +18,7 @@ xsblgt \-- Logtalk integration script for XSB
 Initialization goal, written between double quotes, to be executed after Logtalk startup.
 
 .SH REQUIREMENTS
-XSB 3.2 or later is required. This integration script assumes that the XSB executable is named "xsb".
+XSB 3.3 or later is required. This integration script assumes that the XSB executable is named "xsb".
 
 .SH ENVIRONMENT
 .TP
