@@ -18,7 +18,7 @@ xsbmt64lgt \-- Logtalk integration script for XSB-MT 64 bits
 Initialization goal, written between double quotes, to be executed after Logtalk startup.
 
 .SH REQUIREMENTS
-XSB 3.2 or later is required, compiled 64 bits and with multi-threading support. This integration script assumes that the XSB-MT executable is named "xsb-bits64-mt".
+XSB 3.3 or later is required, compiled 64 bits and with multi-threading support. This integration script assumes that the XSB-MT executable is named "xsb-bits64-mt".
 
 .SH ENVIRONMENT
 .TP
