@@ -18,7 +18,7 @@ xsbmtlgt \-- Logtalk integration script for XSB-MT
 Initialization goal, written between double quotes, to be executed after Logtalk startup.
 
 .SH REQUIREMENTS
-XSB 3.2 or later is required, compiled with multi-threading support. This integration script assumes that the XSB-MT executable is named "xsb-mt".
+XSB 3.3 or later is required, compiled with multi-threading support. This integration script assumes that the XSB-MT executable is named "xsb-mt".
 
 .SH ENVIRONMENT
 .TP
