@@ -475,7 +475,7 @@ The following predicates are defined:
 		<dd>Decompiles a compiled predicate indicator or a list of compiled predicate indicators returning the entity, entity type, and source level predicate indicators. Requires the entity to be currently loaded.</dd>
 </dl>
 <p>
-The following predicates are still defined but should be considered <strong>deprecated</strong>:
+The following predicates are still defined but should be considered <strong>deprecated</strong> and will be removed in the next release:
 </p>
 <dl>
 	<dt><code>decompile_predicate_head(TranslatedHead, Entity, EntityType, Head)</code></dt>
