@@ -111,10 +111,10 @@ echo "* GNU Prolog (version 1.4.0 or later):   gplgt"
 echo "* Qu-Prolog (version 8.12 or later):     qplgt"
 echo "* SICStus Prolog (versions 3.12.x, 4.x): sicstuslgt"
 echo "* SWI-Prolog (version 5.8.0 or later):   swilgt"
-echo "* XSB (version 3.2 or later):            xsblgt     (first run must use sudo)"
-echo "* XSB 64 bits (version 3.2 or later):    xsb64lgt   (first run must use sudo)"
-echo "* XSB MT (version 3.2 or later):         xsbmtlgt   (first run must use sudo)"
-echo "* XSB MT 64 bits (version 3.2 or later): xsbmt64lgt (first run must use sudo)"
+echo "* XSB (version 3.3 or later):            xsblgt     (first run must use sudo)"
+echo "* XSB 64 bits (version 3.3 or later):    xsb64lgt   (first run must use sudo)"
+echo "* XSB MT (version 3.3 or later):         xsbmtlgt   (first run must use sudo)"
+echo "* XSB MT 64 bits (version 3.3 or later): xsbmt64lgt (first run must use sudo)"
 echo "* YAP (version 6.0.2 or later):          yaplgt"
 echo
 echo "Links to the Prolog integration scripts can be found on \"/usr/local/bin\"."
