@@ -65,10 +65,10 @@ post-activate {
 	ui_msg "* Qu-Prolog (version 8.12 or later):     qplgt"
 	ui_msg "* SICStus Prolog (versions 3.12.x, 4.x): sicstuslgt"
 	ui_msg "* SWI-Prolog (version 5.8.0 or later):   swilgt"
-	ui_msg "* XSB (version 3.2 or later):            xsblgt     (first run must use sudo)"
-	ui_msg "* XSB 64 bits (version 3.2 or later):    xsb64lgt   (first run must use sudo)"
-	ui_msg "* XSB MT (version 3.2 or later):         xsbmtlgt   (first run must use sudo)"
-	ui_msg "* XSB MT 64 bits (version 3.2 or later): xsbmt64lgt (first run must use sudo)"
+	ui_msg "* XSB (version 3.3 or later):            xsblgt     (first run must use sudo)"
+	ui_msg "* XSB 64 bits (version 3.3 or later):    xsb64lgt   (first run must use sudo)"
+	ui_msg "* XSB MT (version 3.3 or later):         xsbmtlgt   (first run must use sudo)"
+	ui_msg "* XSB MT 64 bits (version 3.3 or later): xsbmt64lgt (first run must use sudo)"
 	ui_msg "* YAP (version 6.0.2 or later):          yaplgt"
 	ui_msg "*"
 	ui_msg "* Remember to set the environment variable LOGTALKHOME to the path to"
